app/assets/stylesheets/application.css
/* ... */
summary {
	cursor: pointer;
}

/* Remove style from button to so it will look like a link */
input.btn-link:hover,
input.btn-link {
	border: 0;
	padding: 0;
	background-color: var(--color-bg);
	color: var(--color-fg-contrast-4-5);
	line-height: 1;
}
input.btn-link:focus-visible {
	outline: auto;
}

#qrsvg {
	background-color: white;
	display: inline-block;
	padding: 5%;
}

.totp_code::-webkit-inner-spin-button,
.totp_code::-webkit-outer-spin-button {
	-webkit-appearance: none;
	margin: 0;
}

#aria-announce {
	position: absolute;
	width: 1px;
	height: 1px;
	padding: 0;
	margin: -1px;
	overflow: hidden;
	clip: rect(0, 0, 0, 0);
	white-space: nowrap;
	border-width: 0;
}

/* header */

header {
	font-weight: bold;
	line-height: 18px;
}

#logo {
	background: transparent url(logo-transparent.svg) no-repeat center;
	flex: 0 0 16px; /* width; no padding l/r */
	float: left;
	display: block;
	width: 16px;
	height: 16px;
	padding: 1px;
	margin-left: 4px;
	margin-right: 11px;
	position: relative;
}

@media (prefers-contrast: more) {
	#logo {
		background-image: none;
		text-align: center;
	}

	#logo:before {
		content: "L";
		font-family: serif;
		color: var(--color-bg);
	}

	@media (prefers-color-scheme: dark) {
		#logo:before {
			color: var(--color-fg);
		}
	}
}

header#nav .navholder {
	display: flex;
	flex-wrap: nowrap;
	overflow-x: auto;
	overflow-y: clip;
	position: relative; /* context for nav gradients */
	width: 100%;
}
header#nav {
	box-sizing: border-box;
	display: flex;
	padding: 0.5rem 0.5rem 0 0.5rem;
}
header#nav nav.links {
	display: flex;
	width: 100%
}
header#nav a, header#subnav a, header#subnav input[type="submit"] {
	color: var(--color-fg-contrast-6);
	font-weight: bold;
	margin: 0 0.25rem;
	text-decoration: none;
}
header#subnav {
	box-sizing: border-box;
	min-height: 2em;
	line-height: 1em;
	padding: 0.5rem 0.25rem;
	text-align: right;
	width: 100%;
}
header#subnav a.current_page:last-child {
	margin-right: 0.375rem;
}
header a.current_page {
	border-bottom: 0.25em solid var(--color-fg-accent);
	padding: 0 0.25rem 0.25rem;
}
header#nav #logo, header#nav #logo ~ a {
	margin-left: 0;
}
header#nav a:last-child {
	margin-right: 0;
}
header .inbox_unread {
	color: var(--color-fg-accent);
}

#inside {
	margin: 0.5rem 0;
}

/* footer */

footer {
	box-sizing: border-box;
	display: flex;
	padding: 2em 0.5em;
	justify-content: space-between;
	width: 100%;
}
footer a {
	color: var(--color-fg-contrast-4-5);
}
footer nav a {
	padding-left: 0.75em;
	text-decoration: none;
}


/* other specifics */
div#gravatar {
	border: 2px solid var(--color-box-bg);
	border-radius: 100% 100%;
	box-shadow: 0 1px 4px var(--color-shadow-80);
	float: right;
	height: 100px;
	width: 100px;
	margin-bottom: 1rem;
}
div#gravatar img {
	border-radius: 50px;
	height: 100px;
	width: 100px;
}

/* stories */

ol.stories,
ol.comments,
ol.category_tags {
	padding: 0;
	list-style: none;
	margin: 0;
}

ol.comments {
	margin-left: 20px;
	margin-bottom: 0em;
	padding-left: 6px;
}
ol.comments1 {
	margin-left: -40px;
	padding-left: 0;
}
ol.comments.comments1 {
	border-left-color: transparent;
}
ol.comments1 > li.comments_subtree {
	margin-left: 11px;
}
ol.comments1 > li.comments_subtree > ol.comments {
	margin-left: 0;
	padding-left: 0;
}

.notifications > li {
	margin-bottom: 1lh;
}

div.voters {
	float: left;
	margin-top: 0px;
	text-align: center;
	width: 40px;
}

.voters .merge {
	vertical-align: middle;
}

.upvoter:before {
	content: "\25b3";
	font-size: 1.2rem;
	font-family: system-ui, monospace, sans-serif;
}
.upvoter:hover:before,
.upvoted .upvoter:before {
	content: "\25b2";
	color: var(--color-fg-accent);
	-webkit-text-stroke: 1px var(--color-fg-accent);
}
.upvoter {
	color: var(--color-fg-contrast-4-5);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-self: center;
	text-decoration: none;
}
.upvoter:focus { outline: none; } /* don't outline after upvote click */
.upvoter:focus-visible { outline: 2px solid var(--color-fg-link); } /* do outline when tabbing */

li.story {
	clear: both;
}
ol.stories li.story div.story_liner {
	padding-top: 0.25em;
	padding-bottom: 0.25em;
	word-break: break-word;
}
.comment {
	clear: both;
	padding-top: 0.4em;
	padding-bottom: 0.4em;
	position: relative;
}

.comment .details a {
	color: var(--color-fg-contrast-7-5);
}

ol.stories li:first-child div.story_liner {
	padding-top: 0.5em;
}
li div.details {
	padding-top: 0.1em;
}

/*
Stories with negative scores are dimmed by decreasing their opacity.
However, if the flag or archive dropdowns have an opacity set, it creates a "stacking context",
which overides the Z index, so the drop down appears under textareas, making them unclickable.
Thus, the selector for opacity must not target those divs or any of their direct parents.
We must also becareful to apply to only children and not any of the parents.
Otherwise it will double apply, resulting in invidual elements being darker.

We'd like to write the following selector to express that directly, but can't until Firefox
supports it:  https://caniuse.com/?search=%3Ahas
.negative_1 *:not(.dropdown_parent, :has(*)) { ... }
*/
.negative_1 *:not(div, .dropdown_parent, .dropdown_parent > div *, .comments_label, .link, .tags, img, form),
.negative_1 .score {
	opacity: 0.7;
}

.negative_3 *:not(div, .dropdown_parent, .dropdown_parent > div *, .comments_label, .link, .tags, img, form),
.negative_3 .score {
	opacity: 0.6;
}

.negative_5 *:not(div, .dropdown_parent, .dropdown_parent > div *, .comments_label, .link, .tags, img, form),
.negative_5 .score {
	opacity: 0.5;
}

.comment.bad :is(.voters, .byline > :not(.dropdown_parent), .byline .flagger, .details .comment_text) {
	opacity: 0.7;
}

.comment:target, li:target, p:target, div:target, span:target {
	background-color: var(--color-bg-target);
	border-radius: 8px;
}

.showing-user-comment {
	background-color: var(--color-bg-target);
	border-radius: 8px;
	padding: 3px;
}
/* ... */

